[gd_scene load_steps=22 format=2]

[ext_resource path="res://entities/Ceiling_Lamp/ceiling_lamp.tres" type="ArrayMesh" id=1]
[ext_resource path="res://entities/BoundedStage.tscn" type="PackedScene" id=2]
[ext_resource path="res://materials/marble_material.tres" type="Material" id=3]
[ext_resource path="res://entities/Column/column.tres" type="ArrayMesh" id=4]
[ext_resource path="res://misc/instructions.png" type="Texture" id=5]
[ext_resource path="res://addons/RadMatt.3DFPP/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/Column/Column.tscn" type="PackedScene" id=7]
[ext_resource path="res://puzzles/03/FreeThrowBall.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/puzzle_objects/Goal/Goal.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/puzzle_objects/Goal/GoalBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://puzzles/03/CountdownTimer.gd" type="Script" id=11]
[ext_resource path="res://fonts/Roboto/Roboto-Black_36.tres" type="DynamicFont" id=12]
[ext_resource path="res://sounds/effects/buzzer.tres" type="AudioStream" id=13]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.843137, 0.960784, 0.168627, 1 )
ambient_light_color = Color( 0.482353, 0.501961, 0.392157, 1 )
fog_height_min = 0.0
fog_height_max = 100.0
ssao_enabled = true
ssao_radius = 2.0
ssao_intensity = 3.0
ssao_radius2 = 1.0
ssao_light_affect = 0.7
ssao_quality = 0
dof_blur_near_distance = 3.0
dof_blur_near_quality = 2

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_texture = ExtResource( 5 )
roughness = 0.0
uv1_scale = Vector3( 3, 2, 1 )

[sub_resource type="SpatialMaterial" id=4]
roughness = 0.0

[sub_resource type="SpatialMaterial" id=5]
roughness = 0.0

[sub_resource type="SpatialMaterial" id=6]
roughness = 0.0
emission_enabled = true
emission = Color( 0.985229, 1, 0.527344, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=7]
roughness = 0.0

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.483239, 0.695562, 0.491112 )

[node name="Room_01" type="Node"]

[node name="CountdownTimer" type="Label" parent="."]
anchor_left = 0.504
anchor_top = 0.136
anchor_right = 0.504
anchor_bottom = 0.136
margin_left = -106.496
margin_top = -21.6
margin_right = 98.304
margin_bottom = 21.4
grow_horizontal = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "hewwo"
align = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
hang_time = 1.0
freethrow_ball = NodePath("../FreeThrowBall")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CountdownTimer"]
stream = ExtResource( 13 )
bus = "SFX"

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0959454, 7.7763 )

[node name="world" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="world"]
environment = SubResource( 1 )

[node name="ReflectionProbe" type="ReflectionProbe" parent="world"]
extents = Vector3( 24.0949, 8.9894, 27.2268 )

[node name="text1" type="MeshInstance" parent="world"]
transform = Transform( 2.41231, 0, 0, 0, 2.41231, 0, 0, 0, 0.066145, -3.31221, 2.9031, -11.3495 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Ceiling_Lamp2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0800302, 8.62056, -4.97885 )

[node name="Ceiling_Lamp" type="MeshInstance" parent="Ceiling_Lamp2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -1.004, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 4 )
material/1 = SubResource( 5 )
material/2 = SubResource( 6 )
material/3 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Ceiling_Lamp2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.699918, 0 )
shape = SubResource( 8 )

[node name="light_2" type="OmniLight" parent="Ceiling_Lamp2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0249788, -2.11305, -0.0399599 )
shadow_enabled = true
shadow_bias = 0.14
shadow_contact = 0.45
omni_range = 11.5403

[node name="Ceiling_Lamp1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0800302, 8.62056, 5.99616 )

[node name="Ceiling_Lamp" type="MeshInstance" parent="Ceiling_Lamp1"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -1.00401, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 4 )
material/1 = SubResource( 5 )
material/2 = SubResource( 6 )
material/3 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Ceiling_Lamp1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.699918, 0 )
shape = SubResource( 8 )

[node name="light_1" type="OmniLight" parent="Ceiling_Lamp1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0800302, -2.08603, 0.0658698 )
shadow_enabled = true
shadow_bias = 0.14
shadow_contact = 0.45
omni_range = 11.5403

[node name="Columns" type="Node" parent="."]

[node name="column" type="MeshInstance" parent="Columns"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 11.25, 0, 0 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 3 )

[node name="column2" type="MeshInstance" parent="Columns"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 11.25, 0, 6 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 3 )

[node name="column3" type="MeshInstance" parent="Columns"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 11.25, 0, -6 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 3 )

[node name="column6" type="MeshInstance" parent="Columns"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -11.25, 0, 0 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 3 )

[node name="column5" type="MeshInstance" parent="Columns"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -11.25, 0, 6 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 3 )

[node name="column4" type="MeshInstance" parent="Columns"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, -11.25, 0, -6 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 3 )

[node name="BallPillar" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )

[node name="BoundedStage" parent="." instance=ExtResource( 2 )]
title_key = "3"

[node name="GoalBox" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0 )

[node name="Goal" parent="GoalBox" instance=ExtResource( 9 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, -0.0371065, 0 )

[node name="FreeThrowBall" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.5, 0 )
[connection signal="body_entered" from="GoalBox/Goal" to="FreeThrowBall" method="_on_Goal_body_entered"]
[connection signal="body_exited" from="GoalBox/Goal" to="FreeThrowBall" method="_on_Goal_body_exited"]
[connection signal="body_entered" from="FreeThrowBall" to="CountdownTimer" method="_on_FreeThrowBall_body_entered"]
[connection signal="pickup" from="FreeThrowBall" to="CountdownTimer" method="_on_FreeThrowBall_pickup"]
[connection signal="thrown" from="FreeThrowBall" to="CountdownTimer" method="_on_FreeThrowBall_thrown"]
[connection signal="win" from="FreeThrowBall" to="Player" method="on_win"]
